--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <label for="role">Role </label>
 
           <input type="text" id="role" />
-          <label for="name">Image </label>
+          <label for="name">Image (choose from 1 to 4 or select random image) </label>
           <input type="text" id="image" />
           <button type="button" id="addMemberButton">Add</button>
         </div>
